Framework changes and reading and writing file implements and debug file added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Linux)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(HEADER_FILE type.h del_disk.h del_file.h function.h)
+set(HEADER_FILE type.h del_disk.h del_file.h function.h del_cmd.h debug.h)
 set(SOURCE_FILE main.cpp)
 
 add_executable(Linux ${HEADER_FILE} ${SOURCE_FILE})
